Add text ingredients and steps.

--- a/recipes/irish-soda-bread.html
+++ b/recipes/irish-soda-bread.html
@@ -1,4 +1,55 @@
 <h1>irish-soda-bread</h1>
 <img src="../images/irish-soda-bread.jpg" alt="irish-soda-bread">
 
+<p><h2>Irish soda bread made with buttermilk and basic ingredients.</h2></p>
+
+<p>You'll find the full, step-by-step recipe below — 
+    but here's a brief overview of what you can expect
+     when you make homemade Irish soda bread:</p>
+    
+<p><ol>
+    <li>Combine the first six ingredients in a bowl. Stir in the buttermilk and egg.</li>
+    <li>Turn the dough out and knead. Form the dough into a round loaf.</li>
+    <li>Brush with butter and buttermilk, then cut an X in the top.</li>
+    <li>Bake until a toothpick inserted into the center comes out clean.</li>
+</ol></p>
+
+<h2>Ingredients</h2>
+
+<p><ul>
+    <li>4 cups all-purpose flour</li>
+    <li>½ cup margarine, softened</li>
+    <li>4 tablespoons white sugar</li>
+    <li>1 teaspoon baking soda</li>
+    <li>1 tablespoon baking powder</li>
+    <li>½ teaspoon salt</li>
+    <li>1 cup buttermilk</li>
+    <li>1 egg</li>
+    <li>¼ cup butter, melted</li>
+    <li>¼ cup buttermilk</li>
+
+</ul></p>
+
+<h2>Steps</h2>
+
+<p><ol>
+    <li>Preheat the oven to 375 degrees F (190 degrees C).
+         Lightly grease a large baking sheet.</li>
+    <li>Mix flour, softened margarine, sugar, baking soda, baking powder,
+         and salt together in a large bowl.
+          Stir in 1 cup of buttermilk and egg.
+           Turn dough out onto a lightly floured surface and knead slightly.
+            Form dough into a round and place on the prepared baking sheet.</li>
+    <li>Combine melted butter with 1/4 cup buttermilk in a small bowl;
+         brush loaf with this mixture.
+         Use a sharp knife to cut an 'X' into the top of the loaf.</li>
+    <li>Bake in preheated oven until a toothpick inserted into the
+         center of the loaf comes out clean,
+         45 to 50 minutes. Check for doneness after 30 minutes.
+          You may continue to brush the loaf with the butter mixture while it bakes.</li>
+</ol></p>
+
+
+
+
 
