--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
 <h1>Odin Recipes</h1>
 
-<a href="recipes/irish-soda-bread.html">irish-soda-bread</a>
+<ul>
+<li><a href="recipes/irish-soda-bread.html">irish-soda-bread</a></li>
+<li><a href="recipes/potato-scones.html">potato-scones</a></li>
 
+</ul>
     
 </body>
 </html>
